@@ -1,0 +1,7 @@
+#include <stdio.h>
+
+void
+printInt(int i)
+{
+    fprintf(stderr, "%d\n", i);
+}
