@@ -1,0 +1,8 @@
+#include <math.h>
+
+void
+foo(double *x, double y)
+{
+    int ctr = 0;
+    x[ctr] = sqrt(y);
+}
