@@ -42,8 +42,10 @@ f2 <- function(x, mu, sigma, len = length(x))
 doublePointer = pointerType(DoubleType) 
 if(TRUE) {
   mod = Module("fuse")
-  d = compileFunction(Dnorm, DoubleType, list(DoubleType, DoubleType, DoubleType), .insertReturn = TRUE, mod = mod, name = "Dnorm")
-  fc = compileFunction(f2, DoubleType, list(doublePointer, DoubleType, DoubleType, Int32Type), name = "f", mod = mod)
+  d = compileFunction(Dnorm, DoubleType, list(DoubleType, DoubleType, DoubleType), .insertReturn = TRUE, mod = mod, name = "Dnorm", optimize = FALSE)
+  fc = compileFunction(f2, DoubleType, list(doublePointer, DoubleType, DoubleType, Int32Type), name = "f", mod = mod, optimize = FALSE)
+  ee = ExecutionEngine(mod, CodeGenOpt_Aggressive)
+  Optimize(mod)
 }
 
 if(FALSE) {
@@ -51,13 +53,13 @@ if(FALSE) {
   mod = Module("fuse")
   d = compileFunction(Dnorm, DoubleType, list(DoubleType, DoubleType, DoubleType), .insertReturn = TRUE, mod = mod)
   ptrDouble = pointerType(DoubleType)
-  fc = compileFunction(f, DoubleType, list(ptrDouble, DoubleType, DoubleType), .insertReturn = TRUE, mod = mod)  
+  fc = compileFunction(f, DoubleType, list(ptrDouble, DoubleType, DoubleType), .insertReturn = TRUE, mod = mod)
 }
 
 
 if(FALSE) {
   x = rnorm(1e5)
-  a = .llvm(fc, x, 0, 1, length(x))
+  a = .llvm(fc, x, 0, 1, length(x), .ee = ee)
   b = sum(log(dnorm(x)))
   print(a - b, digits = 16)
 }
@@ -67,11 +69,11 @@ if(FALSE) {
   a = .llvm(fc, x, 0, 1, length(x))
 
    # Note no check for NAs, etc. .... 
-  tm.a = system.time(replicate(20, .llvm(fc, x, 0, 1, length(x))))
+  tm.a = system.time(replicate(20, .llvm(fc, x, 0, 1, length(x), .ee = ee)))
   tm.b = system.time(replicate(20, sum(log(dnorm(x)))))
 
 
-  tm.a = replicate(20, system.time(.llvm(fc, x, 0, 1, length(x))))
+  tm.a = replicate(20, system.time(.llvm(fc, x, 0, 1, length(x), .ee = ee)))
   tm.b = replicate(20, system.time(sum(log(dnorm(x)))))
   res = structure(list(llvm = tm.a, r = tm.b), info = sessionInfo(), when = Sys.time())
   save(res, file = "fuseLoop_osx.rda")
