@@ -31,12 +31,39 @@ abort()
 #endif
 
 
-#if 0
-#include <Support/ManagedStatic.h>
+#if 1
+#include <llvm/Support/ManagedStatic.h>
+
 extern "C"
 void
 R_llvm_shutdown()
 {
     llvm::llvm_shutdown();
 }
+
+#include <llvm/Support/Threading.h>
+extern "C"
+SEXP
+R_llvm_start_multithreaded()
+{
+    return(ScalarLogical(llvm::llvm_start_multithreaded()));
+}
+
+extern "C"
+SEXP
+R_llvm_stop_multithreaded()
+{
+    int ans = llvm::llvm_is_multithreaded();
+    llvm::llvm_stop_multithreaded();
+    return(ScalarLogical(ans));
+}
 #endif
+
+
+
+extern "C"
+void
+printInt(int i)
+{
+    fprintf(stderr, "%d\n", i);
+}
