@@ -135,6 +135,14 @@ bool
 convertRToGenericValue(llvm::GenericValue *rv, SEXP rval, const llvm::Type *type)
 {
    llvm::Type::TypeID ty;
+
+   if(!type) {
+       fprintf(stderr, "var arg %d\n", TYPEOF(rval));
+       rv->IntVal = INTEGER(rval)[0];
+
+       return(rv);
+   }
+
     if(type->isPointerTy()) {
       const llvm::Type *elType = ((const llvm::PointerType*) type)->getElementType();
        ty = elType->getTypeID();       
